<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_calories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chefd.mealprep.mealprep.CaloriesCalculatorActivity"
    tools:showIn="@layout/activity_calories_calc">


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calorieviewButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="113dp"
        android:text="Submit"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editWeight"
        android:layout_alignStart="@+id/editWeight"
        android:layout_below="@+id/textBmr"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="(age)"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#FFF"
        android:textSize="18sp"
        android:textStyle="normal|italic"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mcheckBox"
        android:layout_alignBottom="@+id/mcheckBox"
        android:layout_alignLeft="@+id/textWeight"
        android:layout_alignStart="@+id/textWeight"
        android:text="Gender:"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/fcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mcheckBox"
        android:layout_alignBottom="@+id/mcheckBox"
        android:layout_alignEnd="@+id/calorieviewButton"
        android:layout_alignRight="@+id/calorieviewButton"
        android:checked="false"
        android:onClick="onCheckboxClicked"
        android:text="Female"
        android:textAlignment="center"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editAge"
        android:layout_alignBottom="@+id/editAge"
        android:layout_toLeftOf="@+id/editAge"
        android:layout_toStartOf="@+id/editAge"
        android:text="AGE:"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textColorHint="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textBmr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="Basal Metabolic Rate"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calorieviewButton"
        android:layout_alignStart="@+id/calorieviewButton"
        android:layout_below="@+id/editAge"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Weight (lbs)"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textStyle="normal|italic" />

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editWeight"
        android:layout_alignBottom="@+id/editWeight"
        android:layout_toLeftOf="@+id/editWeight"
        android:layout_toStartOf="@+id/editWeight"
        android:text="Weight:"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/mcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editHeightf"
        android:layout_alignStart="@+id/editHeightf"
        android:layout_below="@+id/editWeight"
        android:layout_marginTop="19dp"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:text="Male"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textColorHint="#FFF" />

    <Button
        android:id="@+id/calorieviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/viewcalviewText"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textBmrDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calorieviewButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="@string/textbmrdescription"
        android:textColor="#FFF"
        android:textColorHint="#FFF" />

    <TextView
        android:id="@+id/textResults"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submitButton"
        android:layout_alignBottom="@+id/submitButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text=" "
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editHeighti"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editHeightf"
        android:layout_alignBottom="@+id/editHeightf"
        android:layout_alignEnd="@+id/textBmr"
        android:layout_alignRight="@+id/textBmr"
        android:ems="10"
        android:hint="(in)"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textStyle="normal|italic" />

    <TextView
        android:id="@+id/textHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editHeightf"
        android:layout_alignBottom="@+id/editHeightf"
        android:layout_toLeftOf="@+id/editWeight"
        android:layout_toStartOf="@+id/editWeight"
        android:text=" Height:"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editHeightf"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fcheckBox"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/editHeighti"
        android:layout_toStartOf="@+id/editHeighti"
        android:ems="10"
        android:hint="(ft)"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textStyle="normal|italic" />


</RelativeLayout>
