...
            android:text="@string/bmi_calculator"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="center_vertical|left"
            android:layout_gravity="bottom|center_horizontal" />

        <Button  android:id="@+id/CalorieButton"
            android:text="@string/calorie_counter_title"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            />

        <Button  android:id="@+id/aboutButton"
...
